MNEMOSYNE 0.9.8: 2007-04-13

(Note that for Windows users we recommend uninstalling the previous 
version before doing an upgrade.)

-added sound support through tags like <sound src="a.wav">. The path to
 the sound file is either absolute or relative to the location of your 
 .mem file. To play the sound again, press the 'R' key in the main window. 
 Supported file formats are wav, ogg and mp3. On Linux, this requires
 properly installing pygame and its dependencies like SDL.
-add option to increase size of non-latin characters relative to latin
 characters (together with N. Kriha).
-disable 'edit item' as long as the answer is not shown, to prevent 
 accidentally revealing it (patch by D. Herrmann).
-fix handling of < inside latex tags (reported by jgurling, patch by N. 
 Kriha).
-warn when exiting an 'Add items' which contains an item which has not
 been added (requested by Airconditioning).
-fix UTF-8 handling in the Supermemo7 file format (reported by Loco)
-fix corner cases in scheduling algorithm (patch by Querido).
-make button ordering more consistent in add items (reported by N. Kriha).
-fixed handling of multiple latex tags (reported by M. Boespflug).
-don't hang on latex errors (reported by M. Boespflug).
-make tab-separated import resistant to the presence of multiple tabs 
 (reported by J. Forrez).
-fixed hang when end quotes are not present inside a tag.
-fixed regression where the active flag of categories was not respected on
 import (reported by A. Rachmatullah).
-respect left align option in 'preview items' (reported by E. Grannan).
-making saving more robust while Windows is shutting down (fix by Tom).
-various small interface cleanups and fixes.


MNEMOSYNE 0.9.7: 2006-10-27

-multiple items can now be selected in the 'edit items' dialog in order
 to delete them, change their categories, or add their vice versas.
-added option to import text files where question and answer are each on
 their own line.
-again respect window size set by user.